--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -218,6 +218,9 @@
       "batcur": {
         "name": "huidig"
       },
+      "bat_in_out": {
+        "name": "Batterijvermogen"
+      },
       "pack_input_power": {
         "name": "Batterij Ontladen"
       },
