--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -268,6 +268,9 @@
       "output_home_power": {
         "name": "Ausgangsleistung"
       },
+      "bat_in_out": {
+        "name": "Batterieleistung"
+      },
       "hyper_tmp": {
         "name": "Gerätetemperatur"
       },
