--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -62,6 +62,9 @@
       },
       "heat_state": {
         "name": "Batterieheizung"
+      },
+      "rest_state": {
+        "name": "Energiesparmodus"
       }
     },
     "number": {
