--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -62,6 +62,9 @@
       },
       "heat_state": {
         "name": "Battery heating"
+      },
+      "rest_state": {
+        "name": "Energy saving mode"
       }
     },
     "number": {
