--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -63,6 +63,9 @@
       },
       "heat_state": {
         "name": "batterijverwarming"
+      },
+      "rest_state": {
+        "name": "Energiebesparende modus"
       }
     },
     "number": {
