--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -67,6 +67,9 @@
       },
       "heat_state": {
         "name": "chauffage de batterie"
+      },
+      "rest_state": {
+        "name": "mode d'économie d'énergie"
       }
     },
     "number": {
