Update German translations for battery and charging
Reintroduced 'bat_in_out' translation and updated 'smart_charging' entries for clarity.

--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -82,6 +82,9 @@
       },
       "soc_set": {
         "name": "SoC-Maximum"
+      },
+      "optimal_power": {
+        "name": "optimal Power (% von max)"
       }
     },
     "sensor": {
@@ -250,9 +253,6 @@
       "hyper_2000_pass": {
         "name": "Bypass-Status"
       },
-      "bat_in_out": {
-        "name": "Batterieleistung"
-      },
       "output_pack_power": {
         "name": "Batterieeingangsleistung"
       },
@@ -273,6 +273,9 @@
       },
       "output_home_power": {
         "name": "Ausgangsleistung"
+      },
+      "bat_in_out": {
+        "name": "Batterieleistung"
       },
       "hyper_tmp": {
         "name": "Gerätetemperatur"
@@ -371,7 +374,8 @@
           "manual": "Manuelle Leistungsregelung",
           "smart": "Smarte Leistungsregelung",
           "smart_discharging": "Smartes nur Entladen",
-          "smart_charging": "Smartes nur Laden"
+          "smart_charging": "Smartes nur Laden | PV -> Haus",
+          "smart_charging_bat": "Smartes nur Laden | PV -> Bat"
         }
       },
       "pass_mode": {
