Update translations in en.json
Add new translations for optimal power and smart charging modes.

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -82,6 +82,9 @@
       },
       "soc_set": {
         "name": "SoC Maximum"
+      },
+      "optimal_power": {
+        "name": "optimal Power (% of max)"
       }
     },
     "sensor": {
@@ -371,7 +374,8 @@
           "manual": "Manual Power",
           "smart": "Smart Matching",
           "smart_discharging": "Smart discharge only",
-          "smart_charging": "Smart charge only"
+          "smart_charging": "Smart charge only | PV -> Home",
+          "smart_charging_bat": "Smart charge only | PV -> Bat"
         }
       },
       "pass_mode": {
