--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -372,7 +372,7 @@
           "smart": "Smarte Leistungsregelung",
           "smart_discharging": "Smartes nur Entladen",
           "smart_charging": "Smartes nur Laden | PV -> Haus",
-          "smart_charging_bat": "Smartes nur Laden | PV -> Bat"
+          "smart_charging_bat": "Nur Laden | AC+ / PV -> Bat"
         }
       },
       "pass_mode": {
