--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -301,7 +301,7 @@
         "smart": "Slimme Matching",
         "smart_discharging": "Slim ontladen",
         "smart_charging": "Slim opladen | PV -> Huis",
-        "smart_charging_bat": "Slim opladen | PV -> Bat"
+        "smart_charging_bat": "Opladen | AC+ / PV -> Bat"
       }
     },
     "pass_mode": {
