Rename MATCHING_CHARGE_BAT to STORE_SOLAR and update translations in de.json, en.json, fr.json, and nl.json

--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -371,8 +371,8 @@
           "manual": "Manuelle Leistungsregelung",
           "smart": "Smarte Leistungsregelung",
           "smart_discharging": "Smartes nur Entladen",
-          "smart_charging": "Smartes nur Laden | PV -> Haus",
-          "smart_charging_bat": "Nur Laden | AC+ / PV -> Bat"
+          "smart_charging": "Smartes nur Laden",
+          "store_solar": "Solar speichern"
         }
       },
       "pass_mode": {
