--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -371,8 +371,8 @@
           "manual": "Manual Power",
           "smart": "Smart Matching",
           "smart_discharging": "Smart discharge only",
-          "smart_charging": "Smart charge only | PV -> Home",
-          "smart_charging_bat": "Charge only | AC+ / PV -> Bat"
+          "smart_charging": "Smart charge only",
+          "store_solar": "Store Solar"
         }
       },
       "pass_mode": {
